Tue Nov 22 00:44:59 2011  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_io.rb (test_fcntl_dupfd): the argument of F_DUPFD is
	  minimum file descriptor.

Tue Nov 22 00:25:17 2011  Tanaka Akira  <akr@fsij.org>

	* io.c (linux_get_maxfd): get rid of a warning.

Mon Nov 21 23:39:14 2011  Tanaka Akira  <akr@fsij.org>

	* io.c (linux_get_maxfd): new function to find maximum fd on Linux.
	  (rb_close_before_exec): use linux_get_maxfd.

Mon Nov 21 06:16:24 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* cont.c (fiber_switch): ignore fiber context switch
	  because destination fiber is same as current fiber.
	  With out this, it may segv on FreeBSD 9.
	  patched by Koichi Sasada.

Sun Nov 20 23:22:42 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (extract_makefile, extmake): regenerate makefiles
	  if globbed source file list is changed.

	* lib/mkmf.rb (create_makefile): store ORIG_SRCS.

Sun Nov 20 22:43:03 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/unicode.c (PROPERTY_NAME_MAX_SIZE): +1.
	  reported by Ken Takata. [ruby-dev:44894][Bug #5652]

Sun Nov 20 11:01:28 2011  Tanaka Akira  <akr@fsij.org>

	* lib/set.rb (SortedSet.setup): remove old_init after initialize
	  method is redefined.  The remove before redefinition makes the
	  warning prevention fragile.  [ruby-dev:44892]

Sun Nov 20 04:01:45 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (enc/unicode/name2ctype.h): remove duplicated
	  ifdefs.

Sat Nov 19 19:31:47 2011  Tanaka Akira  <akr@fsij.org>

	* time.c (TIME_COPY_GMT): copy vtm.utc_offset and vtm.zone too.
	  patch by Tomoyuki Chikanaga.
	  [ruby-dev:44827] [Bug #5586]

Sat Nov 19 16:36:57 2011  Tanaka Akira  <akr@fsij.org>

	* test/net/http/test_http.rb: remove temporally files in ensure clause.

Sat Nov 19 08:18:41 2011  Tanaka Akira  <akr@fsij.org>

	* test/net/http/test_http.rb: remove temporally files.

Fri Nov 18 17:18:16 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
