@@ -1,6 +1,0 @@
-module Psych
-  module JSON
-    autoload :TreeBuilder, 'psych/json/tree_builder'
-    autoload :Stream, 'psych/json/stream'
-  end
-end
